--- a/index.html
+++ b/index.html
@@ -383,6 +383,6 @@
       </div>
     </div>
 
-    <script src="./index.tsx"></script>
+    <script src="./example/index.tsx"></script>
   </body>
 </html>
